# zongflow

./: .gitignore  Cargo.toml  Makefile  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
po/: LINGUAS  POTFILES.in  en.po  ja.po  zh.po
resources/: convert.ui  gresource.xml  library.ui  settings.ui  translate.ui  window.ui
src/: app.rs  config.rs  document_object.rs  i18n.rs  lib.rs  main.rs  test_utils.rs
src/convert/: imp.rs  mod.rs
src/core/: mod.rs  settings_file.rs
src/database/: mod.rs
src/settings/: imp.rs  mod.rs
src/translate/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
tests/: core.rs  database.rs  document_object.rs  error_handling.rs  i18n.rs  integration.rs  settings_file.rs
